infrastructure/base/network-security/cnpg-instances.cilium-clusterwide-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cnpg-instances-kube-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: postgresql
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik-external-system
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
